PDEs/fenixPDE/OrganicFarmsPDE/jitfailure-dolfin_expression_1d5f76e0ac7b0443bebb5fb20cc248e8/error.log
/tmp/tmpm93t5a7n/dolfin_expression_1d5f76e0ac7b0443bebb5fb20cc248e8.cpp: In member function ‘virtual void dolfin::dolfin_expression_1d5f76e0ac7b0443bebb5fb20cc248e8::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpm93t5a7n/dolfin_expression_1d5f76e0ac7b0443bebb5fb20cc248e8.cpp:61:37: error: ‘tol’ was not declared in this scope; did you mean ‘atol’?
   61 |           values[0] = x[0] <= 0.5 + tol ? -1 : 1;
      |                                     ^~~
      |                                     atol
